// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App: index mapStateToProps with values 1`] = `
Object {
  "isLoggedIn": true,
}
`;

exports[`App: index mapStateToProps without values 1`] = `
Object {
  "isLoggedIn": false,
}
`;

exports[`App: index render in Oauth mode componentDidMount 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(ReduxForm)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    ENTERPRISE
  </main>
</div>"
`;

exports[`App: index render in Oauth mode componentDidMount 2`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(ReduxForm)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    ENTERPRISE
  </main>
</div>"
`;

exports[`App: index render in enterprise mode 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(ReduxForm)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    ENTERPRISE
  </main>
</div>"
`;

exports[`App: index render in public mode when user is logged in 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(ReduxForm)) />
  <SideBar />
  <main id=\\"outer-container\\" style={{...}}>
    PUBLIC
  </main>
</div>"
`;

exports[`App: index render in public mode when user is not logged in 1`] = `
"<div className=\\"App\\">
  <Connect(LoadingBar) style={{...}} />
  <withRouter(Connect(ReduxForm)) />
  <main id=\\"outer-container\\" style={{...}}>
    PUBLIC
  </main>
</div>"
`;
